# presiding-power

./: devbox.json  package.json  pnpm-lock.yaml  shell.nix
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: main.json
src-tauri/src/: lib.rs  main.rs  tabroom.rs
