[package]
name = "presiding-power"
version = "0.0.1"
description = "A Tauri App"
authors = ["supercoolspy"]
edition = "2021"
license = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "presiding_power_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0-beta", features = [] }

[dependencies]
tauri = { version = "2.0.0-beta", features = [] }
tauri-plugin-shell = "2.0.0-beta"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-log = "2.0.0-beta"
log = "^0.4"
reqwest = { version = "0.12", features = ["rustls-tls", "cookies"] }
reqwest-middleware = "0.3"
reqwest-retry = "0.5"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
once_cell = "1.19.0"
thiserror = "1.0.59"
scraper = "0.19.0"
